--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,18 @@
     background-color: aliceblue;
     display: grid;
     grid-template-areas:
-    "nv nv nv" 
-    "s1 s1 s1"
-    "s2-1 s2-2 s2-3"
-    "s3 s3 s3"
-    "s4 s4 s4"
-    "ft ft ft"
+    "nv" 
+    "s1"
+    "s2"
+    "s3"
+    "s4"
+    "ft"
     ;
+    grid-template-rows: 10vh auto 50vh auto 50vh 20vh;
+    grid-template-columns: 1fr;
     width: 100%;
+    margin: auto;
+    min-height: 100vh;
 }
 #wrapperpraliner {
     background-color: aliceblue;
@@ -31,8 +35,18 @@
 nav {
     background-color: aliceblue;
     grid-area: nv;
+    display: flex;
+    justify-content: flex-end;
+    height: 10vh;
 }
-nav a {
+nav ul {
+    display: flex;
+}
+nav ul li {
+    list-style: none;
+    margin: 0 3rem 0 3rem;
+}
+nav ul li a {
     text-decoration: none;
     color: black;
 }
@@ -49,19 +63,33 @@ aside {
 }
 
 #section1 {
-    background-color: aliceblue;
+    background-color: #996531;
     grid-area: s1;
 }
 #section2 {
-    background-color: aliceblue;
-    grid-area: s2-1;
+    background-color: #ffffff;
+    grid-area: s2;
+    display: flex;
+    justify-content: space-around;
+}
+#section2 article {
+    background-color: #ffffff;
+
+}
+#section2 article img {
+    width: 60vh;
+    height: 40vh;
 }
 #section3 {
-    background-color: aliceblue;
+    background-color: #523518;
     grid-area: s3;
 }
+#section3 h2 {
+    margin: auto;
+    font-size: large;
+}
 #section4 {
-    background-color: aliceblue;
+    background-color: #E6DAA2;
     grid-area: s4;
 }
 #section5 {
