--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/* Denna fil skall innehålla din CSS kod */
 #wrapperhem {
     background-color: aliceblue;
     display: grid;
@@ -10,7 +9,7 @@
     "s4"
     "ft"
     ;
-    grid-template-rows: 10vh auto 50vh auto 50vh 20vh;
+    grid-template-rows: 10vh auto 50vh auto auto 20vh;
     grid-template-columns: 1fr;
     width: 100%;
     margin: auto;
@@ -32,6 +31,7 @@
     background-color: aliceblue;
 }
 
+
 nav {
     background-color: aliceblue;
     grid-area: nv;
@@ -50,22 +50,27 @@ nav ul li a {
     text-decoration: none;
     color: black;
 }
+
 header {
     background-color: aliceblue;
 }
+
 footer {
     background-color: aliceblue;
     grid-area: ft;
 }
+
 aside {
     background-color: aliceblue;
     grid-area: as;
 }
 
+
 #section1 {
     background-color: #996531;
     grid-area: s1;
 }
+
 #section2 {
     background-color: #ffffff;
     grid-area: s2;
@@ -74,40 +79,66 @@ aside {
 }
 #section2 article {
     background-color: #ffffff;
-
+    
 }
 #section2 article img {
-    width: 60vh;
-    height: 40vh;
+    width: 33vw;
+    height: 42vh; 
 }
+#section2 article p {
+    padding-left: 10px;
+}
+
 #section3 {
-    background-color: #523518;
+    background-color: #3d250d;
     grid-area: s3;
+    padding-inline: 10px
+    
 }
 #section3 h2 {
-    margin: auto;
     font-size: large;
+    color: rgb(255, 255, 255);
 }
+#section3 p {
+    color: rgb(255, 255, 255);
+}
+
 #section4 {
-    background-color: #E6DAA2;
+    background-color: #a2815d;
     grid-area: s4;
+    padding-left: 10px;
 }
+#section4 img {
+    width: 50%;
+    display: flex;
+    float: right;
+}
+#section4 h2 {
+    font-size: large;
+    width: 50%;
+    margin: none;
+}
+
 #section5 {
     background-color: aliceblue;
     grid-area: s5;
 }
+
 #section6 {
     background-color: aliceblue;
     grid-area: s6;
 }
+
 #section7 {
     background-color: aliceblue;
     grid-area: s7;
 }
+
 #section8 {
     background-color: aliceblue;
     grid-area: s8;
 }
+
 #section9 {
     background-color: aliceblue;
     grid-area: s9;
