gudarna vet att någon kommer dö om skiten försvinner

--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,10 @@ body {
 }
 
 nav {
-    background-color: rgb(100, 60, 33);
-    opacity: 60%;
-    grid-area: nv;
-    display: flex;
+    
     justify-content: flex-end;
-    height: 10vh;
+    align-items: center;
+    
 }
 nav ul {
     display: flex;
@@ -93,7 +91,8 @@ nav ul li a {
 }
 nav img {
     height: 2vh;
-    float: inline-start;
+    margin: 1.5rem;
+    float: left;
 }
 
 
@@ -108,6 +107,17 @@ header {
 header h1 {
     font-size: 30pt;
     color: #ffffff;
+}
+#headerhem {
+    display: flex;
+    justify-content: space-around;
+    grid-area: nv;
+    background-color: rgb(100, 60, 33);
+    opacity: 60%;
+    height: 10vh;
+}
+#headerhem img {
+    display: block;
 }
 
 
@@ -127,16 +137,15 @@ footer img {
 }
 
 
-aside {
+/* aside {
     background-color: aliceblue;
     grid-area: as;
-}
+} */
 
 
 #section1 {
-    background-color: #996531;
+    background-color: #42271B;
     grid-area: s1;
-    
 }
 #section1 h1 {
     margin: 1rem 0rem 0rem 2rem;
@@ -153,6 +162,7 @@ aside {
     font-size: 13pt;
     color: #ffffff;
     padding-right: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -160,30 +170,35 @@ aside {
     background-color: #ffffff;
     grid-area: s2;
     display: flex;
+    width: 100%;
     justify-content: space-around;
     margin: auto auto 40px auto;
+ 
 }
 #section2 article {
     background-color: #ffffff;
-    
+   
 }
 #section2 article img {
-    width: 33vw;
-    height: 42vh; 
+    width: 100%;
+    height: 40vh; 
 }
 #section2 article h3 {
-    padding-left: 10px;
+    padding-left: 1rem;
     font-size: medium;
 }
 #section2 article p {
-    padding-left: 10px;
-    padding-right: 30px;
-    font-size: 11pt;
+    padding-left: 1rem;
+    padding-right: 2rem;
+    font-size: 12pt;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 #section2 article ul {
     list-style: none;
-    padding: 10px;
+    padding: 1rem;
     margin: 5px 0 5px 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 12pt;
 }
 
 
@@ -199,6 +214,7 @@ aside {
 #section3 p {
     color: rgb(255, 255, 255);
     padding-right:20px ;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -219,6 +235,7 @@ aside {
 #section4 p {
     width: 45%;
     font-size: 12pt;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -226,7 +243,14 @@ aside {
     background-color: rgb(255, 255, 255);
     grid-area: s5;
     padding: 30px;
+}
+#section5 p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 13pt;
+}
+#section5 h5 {
+    font-size: 13pt;
+    margin: auto;
 }
 
 
@@ -294,7 +318,7 @@ aside {
     height: 52vh;
     float: left;
     padding-right: 20px;
-    padding-bottom: 3vh;
+    padding-bottom: 5vh;
 }
 #section9 ul {
     padding-left: 20px;
@@ -429,11 +453,12 @@ aside {
 #section18 {
     background-color: rgb(255, 255, 255);
     grid-area: s18;
-    
+    border-right: 1px solid #42271B;
 }
 #section18 article {
     justify-content: center;
     margin: 20px;
+    padding-left: 10px;
 }
 #section18 img {
     width: 45vw;
@@ -457,6 +482,7 @@ aside {
 #section19 {
     background-color: rgb(255, 255, 255);
     grid-area: s19;
+    border-left: 1px solid #42271B;
 }
 #section19 img {
     width: 45vw;
@@ -467,6 +493,7 @@ aside {
 }
 #section19 article {
     margin: 20px;
+    padding-left:10px ;
 }
 #section19 article p {
     padding-bottom: 25px;
@@ -474,4 +501,80 @@ aside {
 }
 #section19 ul li {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+
+
+@media screen and (max-width:600px){
+    #wrapperhem{
+        max-width: 600px;
+    }
+
+    header {
+        position: relative;
+    }
+    #headerhem img {
+        height: 2vh;
+        margin-left: 2rem;
+    }
+    nav {
+        justify-content: center;
+        max-height: 0px;
+        overflow: hidden;
+    }
+    nav.active {
+        max-height: 1000px;
+    }
+   
+    
+    #hamburgermeny{
+        height: 1.9rem;
+        width: 2.2rem;
+        position: absolute;
+        top: 1.5rem;
+        right: 1.5rem;
+    }
+    #hamburgermeny div{
+        border: 2px solid rgb(255, 255, 255);
+        margin: 0.3rem;
+    }
+
+    #section1 p {
+        font-size: 11pt;
+    }
+    #section1 img {
+        height: 25vh;
+    }
+
+    #section2 article img {
+        height: 27vh;
+    }
+    #section2 article p {
+        font-size: 11pt;
+    }
+    #section2 article ul {
+        font-size: 11pt;
+    }
+
+    #section3 p {
+        font-size: 11pt;
+    }
+
+    #section4 {
+        padding: 0;
+    }
+    #section4 p {
+        font-size: 10.5pt;
+        width: 100%;
+        margin: 0 2rem 2rem 1rem;
+    }
+    #section4 h2 {
+        margin: 1rem;
+    }
+    #section4 img {
+        width: 600px;
+        float: none;
+        padding: 0;
+    }
 }
